syntax = "proto2";

package NYT.NJournalClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TOverlayedJournalChunkHeader
{
    required int64 first_row_index = 1;
}

////////////////////////////////////////////////////////////////////////////////
